add tests and split classes